# MapLooper-faust

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  Faust.dsp  main.cpp
